Squash merge test/spring-4 into stage